VSCODE 런처에 streamlit 추가

--- a/LangGraph-Adaptive-RAG/.vscode/launch.json
+++ b/LangGraph-Adaptive-RAG/.vscode/launch.json
@@ -11,6 +11,15 @@
       "program": "${file}",
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "name": "Streamlit RAG 실행",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "streamlit",
+      "args": ["run", "main.py"],
+      "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
